@@ -26,6 +26,8 @@ import java.text.SimpleDateFormat;
 import java.util.*;
 import java.util.zip.GZIPInputStream;
 
+import org.apache.commons.logging.Log;
+import org.apache.commons.logging.LogFactory;
 import org.apache.hadoop.classification.InterfaceAudience;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.conf.Configured;
@@ -49,6 +51,8 @@ import org.apache.hadoop.util.StringUtils;
 /** Provide command line access to a FileSystem. */
 @InterfaceAudience.Private
 public class FsShell extends Configured implements Tool {
+  
+  static final Log LOG = LogFactory.getLog(FsShell.class);
 
   protected FileSystem fs;
   private Trash trash;
@@ -952,6 +956,7 @@ public class FsShell extends Configured implements Tool {
         try {
           dstFstatus = fs.getFileStatus(dst);
         } catch(IOException e) {
+          LOG.debug("Error getting file status of " + dst, e);
         }
         if((srcFstatus!= null) && (dstFstatus!= null)) {
           if (srcFstatus.isDirectory()  && !dstFstatus.isDirectory()) {
@@ -999,6 +1004,7 @@ public class FsShell extends Configured implements Tool {
         //
         rename(argv[i], dest);
       } catch (RemoteException e) {
+        LOG.debug("Error renaming " + argv[i], e);
         //
         // This is a error returned by hadoop server. Print
         // out the first line of the error mesage.
@@ -1013,6 +1019,7 @@ public class FsShell extends Configured implements Tool {
                              ex.getLocalizedMessage());
         }
       } catch (IOException e) {
+        LOG.debug("Error renaming " + argv[i], e);
         //
         // IO exception encountered locally.
         //
@@ -1083,6 +1090,7 @@ public class FsShell extends Configured implements Tool {
         //
         copy(argv[i], dest, conf);
       } catch (RemoteException e) {
+        LOG.debug("Error copying " + argv[i], e);
         //
         // This is a error returned by hadoop server. Print
         // out the first line of the error mesage.
@@ -1098,6 +1106,7 @@ public class FsShell extends Configured implements Tool {
                              ex.getLocalizedMessage());
         }
       } catch (IOException e) {
+        LOG.debug("Error copying " + argv[i], e);
         //
         // IO exception encountered locally.
         //
@@ -1159,6 +1168,7 @@ public class FsShell extends Configured implements Tool {
           return;
         }
       } catch (IOException e) {
+        LOG.debug("Error with trash", e);
         Exception cause = (Exception) e.getCause();
         String msg = "";
         if(cause != null) {
@@ -1276,6 +1286,7 @@ public class FsShell extends Configured implements Tool {
     } catch(FileNotFoundException fnfe) {
       System.err.println(cmd + ": could not get listing for '" + path + "'");
     } catch (IOException e) {
+      LOG.debug("Error listing " + path, e);
       System.err.println(cmd + 
                          ": could not get get listing for '" + path + "' : " +
                          e.getMessage().split("\n")[0]);
@@ -1332,6 +1343,7 @@ public class FsShell extends Configured implements Tool {
             errors += runCmdHandler(handler, file, srcFs, recursive);
           }
         } catch (IOException e) {
+          LOG.debug("Error getting status for " + path, e);
           String msg = (e.getMessage() != null ? e.getLocalizedMessage() :
             (e.getCause().getMessage() != null ? 
                 e.getCause().getLocalizedMessage() : "null"));
@@ -1687,6 +1699,7 @@ public class FsShell extends Configured implements Tool {
           text(argv[i]);
         }
       } catch (RemoteException e) {
+        LOG.debug("Error", e);
         //
         // This is a error returned by hadoop server. Print
         // out the first line of the error message.
@@ -1702,6 +1715,7 @@ public class FsShell extends Configured implements Tool {
                              ex.getLocalizedMessage());
         }
       } catch (IOException e) {
+        LOG.debug("Error", e);
         //
         // IO exception encountered locally.
         //
@@ -1855,11 +1869,13 @@ public class FsShell extends Configured implements Tool {
     // initialize FsShell
     try {
       init();
-    } catch (RPC.VersionMismatch v) { 
+    } catch (RPC.VersionMismatch v) {
+      LOG.debug("Version mismatch", v);
       System.err.println("Version Mismatch between client and server" +
                          "... command aborted.");
       return exitCode;
     } catch (IOException e) {
+      LOG.debug("Error", e);
       System.err.println("Bad connection to FS. Command aborted. Exception: " +
           e.getLocalizedMessage());
       return exitCode;
@@ -1956,10 +1972,12 @@ public class FsShell extends Configured implements Tool {
         printUsage("");
       }
     } catch (IllegalArgumentException arge) {
+      LOG.debug("Error", arge);
       exitCode = -1;
       System.err.println(cmd.substring(1) + ": " + arge.getLocalizedMessage());
       printUsage(cmd);
     } catch (RemoteException e) {
+      LOG.debug("Error", e);
       //
       // This is a error returned by hadoop server. Print
       // out the first line of the error mesage, ignore the stack trace.
@@ -1974,6 +1992,7 @@ public class FsShell extends Configured implements Tool {
                            ex.getLocalizedMessage());  
       }
     } catch (IOException e) {
+      LOG.debug("Error", e);
       //
       // IO exception encountered locally.
       // 
@@ -1981,6 +2000,7 @@ public class FsShell extends Configured implements Tool {
       System.err.println(cmd.substring(1) + ": " + 
                          e.getLocalizedMessage());  
     } catch (Exception re) {
+      LOG.debug("Error", re);
       exitCode = -1;
       System.err.println(cmd.substring(1) + ": " + re.getLocalizedMessage());  
     } finally {
